@@ -1,2 +1,13 @@
 # Tumbleweed
 Code editor group project for COSC 4353.
+
+Rough Prototype of a menu bar and creating project settings
+To compile and run:
+
+`javac --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web Editor.java`
+
+`java --module-path /usr/share/openjfx/lib/ --add-modules javafx.controls,javafx.base,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web Editor`
+
+OR
+
+https://openjfx.io/openjfx-docs/#install-javafx
